fixed image getting too narrowed

--- a/src/components/About/Aboout.css
+++ b/src/components/About/Aboout.css
@@ -10,6 +10,8 @@
 .my-image{
     width: 400px;
     height: 300px;
+    object-position: 100% 0;
+    object-fit: cover;
 }
 .about-wrapper{
     display: flex;
